--- a/src/templates/pages/index.njk
+++ b/src/templates/pages/index.njk
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-  {%- include("../partial/header.ejs", {}); %}
+  {% include 'src/templates/__partials/header.njk' %}
 
   <main id="content"></main>
   <footer id="footer"></footer>
